src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 222.2 84% 4.9%;
    --muted: 210 40% 96.1%;
    --muted-foreground: 215.4 16.3% 46.9%;
    --popover: 0 0% 100%;
    --popover-foreground: 222.2 84% 4.9%;
    --card: 60 100% 98%;
    --card-foreground: 222.2 84% 4.9%;
    --border: 220 13.39% 90.41%;
    --input: 214.3 31.8% 91.4%;
    --primary: 220 66% 58%;
    --primary-foreground: 210 40% 98%;
    --secondary: 210 40% 96.1%;
    --secondary-foreground: 222.2 47.4% 11.2%;
    --accent: 210 40% 96.1%;
    --accent-foreground: 222.2 47.4% 11.2%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 210 40% 98%;
    --ring: 222.2 84% 4.9%;
    --radius: 0.5rem;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .dark {
    --background: 233 21% 15%;
    --foreground: 210 40% 98%;
    --muted: 217.78 20% 26.47%;
    --muted-foreground: 215 20.2% 65.1%;
    --popover: 233 19% 19%;
    --popover-foreground: 210 40% 98%;
    --card: 233 21% 15%;
    --card-foreground: 210 40% 98%;
    --border: 217.78 20% 26.47%;
    --input: 217.78 20% 26.47%;
    --primary: 220 66% 75%;
    --primary-foreground: 233 19% 19%;
    --secondary: 217.78 20% 26.47%;
    --secondary-foreground: 210 40% 98%;
    --accent: 217.2 19.46% 26.53%;
    --accent-foreground: 210 40% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 210 40% 98%;
    --ring: 212.7 26.8% 83.9%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }

  h1 {
    @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
  }

  h2 {
    @apply scroll-m-20 pb-2 text-3xl font-semibold tracking-tight first:mt-0;
  }

  h3 {
    @apply scroll-m-20 text-2xl font-semibold tracking-tight;
  }

  h4 {
    @apply scroll-m-20 text-xl font-semibold tracking-tight;
  }

  h5 {
    @apply scroll-m-20 text-lg font-semibold tracking-tight;
  }
}

body {
  /* https://stackoverflow.com/questions/69923665/chrome-extension-shows-incorrect-font-size-compared-to-the-local-dev-testing */
  font-size: 100%;
}

.h-card {
  height: calc(90vh - 1.1rem);
  max-height: calc(90vh - 1.1rem);
}

.w-board {
  width: calc(100vw - 2rem);
  max-width: calc(100vw - 2rem);
}

